--- a/package.json
+++ b/package.json
@@ -1,40 +1,55 @@
-{
-  "name": "react-homework-template",
-  "version": "0.1.0",
-  "private": true,
-  "homepage": "https://goitacademy.github.io/react-homework-template/",
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.3",
-    "@testing-library/react": "^12.1.4",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.3"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "lint:js": "eslint src/**/*.{js,jsx}"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
-}
+    {
+        "name": "goit-react-hw-08-phonebook",
+        "version": "0.1.1",
+        "private": true,
+        "homepage": "https://jpagente.github.io/goit-react-hw-08-phonebook/",
+        "dependencies": {
+        "@emotion/react": "^11.11.3",
+        "@emotion/styled": "^11.11.0",
+        "@mui/icons-material": "^5.15.6",
+        "@mui/material": "^5.15.6",
+        "@reduxjs/toolkit": "^1.9.7",
+        "@testing-library/jest-dom": "^5.16.3",
+        "@testing-library/react": "^12.1.4",
+        "@testing-library/user-event": "^13.5.0",
+        "axios": "^1.6.5",
+        "formik": "^2.4.5",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-hot-toast": "^2.4.1",
+        "react-icons": "^4.10.1",
+        "react-loader-spinner": "^5.4.5",
+        "react-redux": "^8.1.3",
+        "react-router-dom": "^6.21.3",
+        "react-scripts": "^5.0.1",
+        "redux-persist": "^6.0.0",
+        "styled-components": "^6.1.8",
+        "web-vitals": "^2.1.4",
+        "yup": "^1.3.3"
+        },
+        "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject",
+        "lint:js": "eslint src/**/*.{js,jsx}"
+        },
+        "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+        },
+        "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+        }
+    }
